Updated style issues on small screens, pt 2

--- a/weppyweb/static/main.css
+++ b/weppyweb/static/main.css
@@ -215,14 +215,14 @@ th {
     position: absolute;
     left: 0;
     margin: 4px;
-    margin-left: 20px;
-    font-size: 0.92em;
+    margin-left: 18px;
+    font-size: 0.85em;
 }
 
 .navigator-right {
     position: absolute;
     right: 0;
     margin: 4px;
-    margin-right: 20px;
-    font-size: 0.92em;
+    margin-right: 18px;
+    font-size: 0.85em;
 }
